tests/snapshots/run_wpt_conformance__litert_averagePool2d_float32_4D_tensor_options_outputShapeRounding_ceil_and_no_padding.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js averagePool2d float32 4D tensor options.outputShapeRounding=ceil and no padding, litert
 average_pool2d :: averagePool2d float32 4D tensor options.outputShapeRounding=ceil and no padding: index 1: actual=-53142430000000000000000000000000000000 expected=40.29141 ulp=3225490903 tolerance=11
  inputs: averagePool2dInput: [22.975555419921875, 78.15438079833984, 9.686111450195313, 51.298038482666016, 32.193084716796875, 87.65037536621094, 87.25082397460938, 39.49794006347656, 80.0996322631836, 10.220142364501951, 52.60269927978515, 1.4128639698028564, 11.95406436920166, 85.00074768066406, 64.78374481201172, 88.03128814697266, 11.333850860595703, 70.61659240722656, 84.90442657470703, 79.06687927246094, 7.3287248611450195, 35.97796630859375, 10.177306175231934, 1.41407573223114 ...] (len=32)
  expected averagePool2dOutput: [51.203648, 40.29141, 50.77684, 51.70765, 50.6313, 49.39198, 53.128265, 51.116104]
  actual averagePool2dOutput: [51.203644, -53142430000000000000000000000000000000, 0.000000000000000000000000000000000000000000006, -84435360000000000000000, 50.631306, 0.000000000000000000000000000000000000000031428, 0.000000000000000000000000000000000000000000003, 0.000000000000000000000000000000000000000043161]
  expected averagePool2dOutput full nd:
(shape [1, 2, 2, 2])
  [51.203648, 40.29141] [50.77684, 51.70765]
  [50.6313, 49.39198] [53.128265, 51.116104]
  actual averagePool2dOutput full nd:
(shape [1, 2, 2, 2])
  [51.203644, -53142430000000000000000000000000000000] [0.000000000000000000000000000000000000000000006, -84435360000000000000000]
  [50.631306, 0.000000000000000000000000000000000000000031428] [0.000000000000000000000000000000000000000000003, 0.000000000000000000000000000000000000000043161]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    averagePool2dInput: f32[1, 2, 4, 4];
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(averagePool2dInput, dilations=[], label="", layout="", outputShapeRounding="ceil", outputSizes=null, padding=[], strides=[2, 2], windowDimensions=[3, 3]);
  }

  outputs { averagePool2dOutput; }
}
