tests/snapshots/run_wpt_conformance__litert_averagePool2d_float32_4D_tensor_options_outputShapeRounding_ceil_with_asymmetric_window.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
averagePool2d.https.any.js averagePool2d float32 4D tensor options.outputShapeRounding=ceil with asymmetric window, litert
 average_pool2d :: averagePool2d float32 4D tensor options.outputShapeRounding=ceil with asymmetric window: index 2: actual=16.5 expected=10 ulp=6553600 tolerance=8
  inputs: averagePool2dInput: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24 ...] (len=25)
  expected averagePool2dOutput: [6.5, 8.5, 10, 16.5, 18.5, 20]
  actual averagePool2dOutput: [6.5, 8.5, 16.5, 18.5, 0.000000000000000000000000000000000000000000064, 0.000000000000000000000000000000000000000000003]
  expected averagePool2dOutput full nd:
(shape [1, 1, 2, 3])
  [6.5, 8.5, 10] [16.5, 18.5, 20]
  actual averagePool2dOutput full nd:
(shape [1, 1, 2, 3])
  [6.5, 8.5, 16.5] [18.5, 0.000000000000000000000000000000000000000000064, 0.000000000000000000000000000000000000000000003]

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    averagePool2dInput: f32[1, 1, 5, 5];
  }

  nodes {
    [averagePool2dOutput] = averagePool2d(averagePool2dInput, dilations=[], label="", layout="", outputShapeRounding="ceil", outputSizes=null, padding=[], strides=[2, 2], windowDimensions=[3, 2]);
  }

  outputs { averagePool2dOutput; }
}
