tests/snapshots/run_wpt_conformance__litert_batchNormalization_float16_2D_constant_tensors_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
batch_normalization_constant.https.any.js batchNormalization float16 2D constant tensors default options, litert
 batch_normalization_constant :: batchNormalization float16 2D constant tensors default options: index 0: actual=-4.53125 expected=-4.3125 ulp=56 tolerance=12
  inputs: bnInput: [-41.3125, 64.0625, -63.375, -46.78125, 83, -80.0625, -62.15625, -0.10009765625, -40.90625, 56.96875, 37.375, 57.03125, 82.0625, -86.125, 76.875, 97.0625, -21.34375, -96.9375, -9.359375, 80.1875, -85.375, 62.34375, -68.5, -12.109375] (constant); bnMean: [-7.8125, -95.625, 38.15625, -55.9375, -87.875, -41.625] (constant); bnVariance: [60.3125, 26.4375, 53.28125, 40.15625, 59.40625, 36] (constant)
  expected bnOutput: [-4.3125, 31.0625, -13.90625, 1.4453125, 22.171875, -6.40625, -6.9960938, 18.578125, -10.828125, 17.8125 ...] (len=24)
  actual bnOutput: [-4.53125, 35.0625, -14.7109375, 1.5595703, 23.3125, -6.9804688, -7.3515625, 20.96875, -11.4609375, 19.21875 ...] (len=24)
  expected bnOutput full nd:
[-4.3125, 31.0625, -13.90625, 1.4453125, 22.171875, -6.40625, -6.9960938, 18.578125, -10.828125, 17.8125, ...] (len=24, shape=[4, 6])
  actual bnOutput full nd:
[-4.53125, 35.0625, -14.7109375, 1.5595703, 23.3125, -6.9804688, -7.3515625, 20.96875, -11.4609375, 19.21875, ...] (len=24, shape=[4, 6])

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[4, 6] @bytes([42, 209, 1, 84, 236, 211, 217, 209, 48, 85, 1, 213, 197, 211, 104, 174, 29, 209, 31, 83, 172, 80, 33, 83, 33, 85, 98, 213, 206, 84, 17, 86, 86, 205, 15, 214, 174, 200, 3, 85, 86, 213, 203, 83, 72, 212, 14, 202]);
    operand_1: f16[6] @bytes([208, 199, 250, 213, 197, 80, 254, 210, 126, 213, 52, 209]);
    operand_2: f16[6] @bytes([138, 83, 156, 78, 169, 82, 5, 81, 109, 83, 128, 80]);
  }

  nodes {
    [bnOutput] = batchNormalization(operand_0, operand_1, operand_2, axis=1, bias=null, epsilon=0.00001, label="", scale=null);
  }

  outputs { bnOutput; }
}
